# xjni

./: CMakeLists.txt  README.md
cmake/: Config.cmake.in  WLD.cmake  uninstall.cmake  wldl.json  xjni.pc.in
doc/: Doxyfile.in
include/: xjni.h  xjni2d.h  xjni_arrayfield.h  xjni_new.h  xjni_printf.h  xjni_stringarray.h  xjni_stringbuilder.h  xjni_stringreader.h
include/xjni/: xjni.h  xjni2d.h  xjni_args.h  xjni_arrayfield.h  xjni_log.h  xjni_new.h  xjni_printf.h  xjni_stringarray.h  xjni_stringbuffer.h  xjni_stringbuilder.h  xjni_stringreader.h  xjni_stringwriter.h  xjni_va_list.h
src/: base-jni.h  xjni.c  xjni2d.c  xjni_args.c  xjni_arrayfield.c  xjni_log.c  xjni_new.c  xjni_printf.c  xjni_stringarray.c  xjni_stringbuffer.c  xjni_stringbuilder.c  xjni_stringreader.c  xjni_stringwriter.c  xjni_va_list.c
test/c/: xjni2d_test.c  xjni_arrayfield_test.c  xjni_log_test.c  xjni_stringarray_test.c  xjni_stringbuffer_test.c  xjni_stringbuilder_test.c  xjni_stringreader_test.c  xjni_stringwriter_test.c  xjni_test.c  xjni_va_list_test.c
test/java/: Array2DTest.java  ArrayFieldTest.java  TestStringArray.java  TestStringBuffer.java  TestStringBuilder.java  TestStringReader.java  TestStringWriter.java  TestXJNI.java  TestXJNILOG.java  TestXJNIPrintf.java
